--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:shellus/laravel-auth.git"
+    "url": "git@github.com:shellus/laravel-auth-js.git"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
